--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--secondary-color);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+// Variables
+
+:root{
+  --primary-color: #a7a7a7;
+  --secondary-color: #242424;
+  --red: #eb2222;
+
+  --primary-bg: #ffffff;
+  --secondary-bg: #dbdbdb;
 }
