--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,10 +11,16 @@
         font-weight: bold;
         letter-spacing: 3px;
         margin: 0;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        text-decoration: none;
+        color: var(--secondary-color);
     }
     
     &__menu-icon {
         cursor: pointer;
+        visibility: hidden;
     }
 
     &__icons{
@@ -25,7 +31,25 @@
 
     &__icon{
         margin-right: 15px;
+        cursor: pointer;
+        text-decoration: none;
+        color: var(--secondary-color);
     }
 }
 
+
+@media only screen and (max-width: 600px) {
+    .header{
+      &__menu-icon {
+        visibility: visible;
+      }
+
+      &__title {
+        left: 20%;
+        transform: translate(-20%);
+        font-size: 25px;
+      }
+    }
+}
+  
 
