--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--secondary-color);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 code {
