--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
     height: 60px;
 
     &__title{
+        padding: 10px;
         font-size: 30px;
         font-weight: bold;
         letter-spacing: 3px;
@@ -19,6 +20,7 @@
     }
     
     &__menu-icon {
+        padding: 10px;
         cursor: pointer;
         visibility: hidden;
     }
@@ -30,7 +32,7 @@
     }
 
     &__icon{
-        margin-right: 15px;
+        padding: 10px;
         cursor: pointer;
         text-decoration: none;
         color: var(--secondary-color);
@@ -45,9 +47,9 @@
       }
 
       &__title {
-        left: 20%;
-        transform: translate(-20%);
-        font-size: 25px;
+        left: 30%;
+        transform: translate(-30%);
+        font-size: 15px;
       }
     }
 }
