--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--secondary-color);
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -25,4 +24,13 @@ code {
 
   --primary-bg: #ffffff;
   --secondary-bg: #dbdbdb;
+}
+
+@media only screen and (max-width: 600px){
+  html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
+  }
 }
