--- a/src/components/Item-details/Item-details.scss
+++ b/src/components/Item-details/Item-details.scss
@@ -33,13 +33,26 @@
             color: var(--secondary-color);
         }
 
-        &__size {
-            font-size: 20px;
-            font-weight: 600;
-        }
-
         &__color {
             font-size: 30px;
         }
+
+        &__btn {
+            font-size: 20px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            padding: 20px 100px;
+            border-radius: 10px;
+            border: none;
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            cursor: pointer;
+        
+            &:hover{
+                border: 1px solid grey;
+            }
+        }
+
+
     }
 }
