--- a/src/components/Item-details/Item-details.scss
+++ b/src/components/Item-details/Item-details.scss
@@ -1,25 +1,29 @@
-.item-details{
+.item-details {
     display: flex;
     flex-direction: row;
+    margin: 100px 10px;
 
-    &__img{
+    &__img {
         width: 50%;
         height: 50%;
         padding: 20px;
     }
 
-    &__content{
+    &__content {
         width: 50%;
         display: flex;
         justify-items: center;
         align-items: center;
         flex-direction: column;
-        padding-top: 100px;
 
         &__title {
             font-size: 40px;
             font-weight: 600;
             letter-spacing: 2px;
+        }
+
+        &__cat {
+            font-size: 25px;
         }
 
         &__sale {
@@ -47,12 +51,33 @@
             background-color: var(--primary-color);
             color: var(--secondary-color);
             cursor: pointer;
-        
-            &:hover{
+
+            &:hover {
                 border: 1px solid grey;
             }
         }
+    }
+
+    &__desc {
+        margin: 30px;
+        font-size: 20px;
+        text-align: left;
+    }
+}
 
 
+@media only screen and (max-width: 600px) {
+    .item-details {
+        flex-direction: column;
+        margin-bottom: 50px;
+
+        &__img {
+            width: auto;
+        }
+
+        &__content {
+            width: auto;
+            padding-top: 0;
+        }
     }
 }
