--- a/src/pages/Mens/Mens.scss
+++ b/src/pages/Mens/Mens.scss
@@ -1,7 +1,7 @@
 .mens {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-content: stretch;
     align-items: center;
 
