--- a/src/index.scss
+++ b/src/index.scss
@@ -18,12 +18,12 @@ code {
 // Variables
 
 :root{
-  --primary-color: #a7a7a7;
+  --primary-color: #808080;
   --secondary-color: #242424;
   --red: #eb2222;
 
   --primary-bg: #ffffff;
-  --secondary-bg: #dbdbdb;
+  --secondary-bg: #e7e7e7;
 }
 
 @media only screen and (max-width: 600px){
