--- a/src/components/Card-item/Card-item.scss
+++ b/src/components/Card-item/Card-item.scss
@@ -33,7 +33,8 @@
 
 @media only screen and (max-width: 600px) {
     .card {
-        width: 100%;
+        width: 90%;
+        margin: auto;
         height: auto;
         &_img {
             height: 600px;
