--- a/src/components/Item-details/Item-details.scss
+++ b/src/components/Item-details/Item-details.scss
@@ -70,6 +70,7 @@
     .item-details {
         flex-direction: column;
         margin-bottom: 50px;
+        margin-top: 0;
 
         &__img {
             width: auto;
