--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -9,10 +9,11 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1200px) {
     .slider{
         &__item{
-            min-height: 700px;
+            height: 700px;
+            width: auto;
         }
     }
 }
