--- a/src/components/Item-details/Item-details.scss
+++ b/src/components/Item-details/Item-details.scss
@@ -46,14 +46,14 @@
             font-weight: 700;
             letter-spacing: 1px;
             padding: 20px 100px;
-            border-radius: 10px;
-            border: none;
-            background-color: var(--primary-color);
-            color: var(--secondary-color);
+            border: 1px solid black;
+            background-color: white;
+            color: black;
             cursor: pointer;
 
             &:hover {
-                border: 1px solid grey;
+                background-color: black;
+                color: white;
             }
         }
     }
