--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     text-align: left;
     margin-left: 20px;
+    margin-bottom: 0;
 
     &__title {
         font-size: 40px;
@@ -29,7 +30,7 @@
             font-size: 18px;
             font-weight: 400;
             background-color: var(--secondary-bg);
-            min-height: 500px;
+            min-height: 600px;
 
             &__title {
                 font-size: 35px;
@@ -58,13 +59,13 @@
                 border: 0;
                 color: white;
                 background-color: black;
+                border: 1px solid black;
                 font-size: 20px;
-                border: none;
                 cursor: pointer;
                 padding: 10px;
 
                 &:hover {
-                    border: 1px solid var(--primary-bg);
+                    border: none;
                 }
             }
         }
@@ -86,12 +87,12 @@
             font-size: 20px;
             padding: 10px;
             width: 200px;
-            border: none;
+            border: 1px solid black;
             background-color: black;
             color: white;
             cursor: pointer;
             &:hover{
-                border: 1px solid var(--secondary-bg);
+                border: none;
             }
         }
     }
@@ -117,6 +118,16 @@
                 width: auto;
                 font-size: 15px;
                 padding: 30px;
+                min-height: 500px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .cart {
+        &__content {
+            &__summary {
                 min-height: auto;
             }
         }
